--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,22 @@ torch==2.1.0
 torchvision==0.16.0
 
 # Data processing and scientific computing
-numpy>=1.24.3
-scipy>=1.10.1
-scikit-learn>=1.3.0
+numpy==1.24.3
+scipy==1.10.1
+scikit-learn==1.3.0
 
 # Computer vision and 3D processing tools
 opencv-python==4.8.1.78
 open3d==0.17.0
-pykitti>=0.3.1
-pyquaternion>=0.9.9
+pykitti==0.3.1
+pyquaternion==0.9.9
 
 # Visualization and development tools
-matplotlib>=3.7.1
-tensorboard>=2.13.0
-jupyter>=1.0.0
-tqdm>=4.65.0
+matplotlib==3.7.1
+tensorboard==2.13.0
+jupyter==1.0.0
+tqdm==4.65.0
+ipykernel==6.26.0  # Added for Jupyter notebook kernel support
 
 # Testing framework
-pytest>=7.4.0
+pytest==7.4.0
